syntax = "proto3";

option java_package = "com.reach.modernandroid.data.base.datastore";
option java_multiple_files = true;

message SettingsPb {
  int32 dark_theme_config = 1;

  bool dynamic_theme = 2;
}