syntax = "proto3";

option java_package = "com.reach.modernandroid.data.base.datastore";
option java_multiple_files = true;

enum DarkThemeConfig {
  FOLLOW_SYSTEM = 0;
  DARK = 1;
  LIGHT = 2;
}

message UserSettings {
  DarkThemeConfig dark_theme_config = 1;

  bool dynamic_theme = 2;
}